--- a/Repos.Web.Admin/Views/Home/Index.cshtml
+++ b/Repos.Web.Admin/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Repos Retail";
 }
 
 <div class="text-center">
@@ -7,4 +7,22 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
 
     <h1>Panel de administración</h1>
+    <h2>¿Qué deseas configurar?</h2>
+    
+    
+    <div class="box-selection">
+        <a asp-controller="Home" asp-action="Index">Empresa</a>
+    </div>
+
+    <div class="box-selection">
+        <a asp-controller="Home" asp-action="Index">Sucursal</a>
+    </div>
+
+    <div class="box-selection">
+        <a asp-controller="Home" asp-action="Index">Almacén</a>
+    </div>
+
+    <div class="box-selection">
+        <a asp-controller="Home" asp-action="Index">Caja</a>
+    </div>
 </div>
