--- a/Repos.Web.Admin/Views/Shared/_Layout.cshtml
+++ b/Repos.Web.Admin/Views/Shared/_Layout.cshtml
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Repos.Web.Admin</title>
+    <title>@ViewData["Title"]</title>
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <div>
+            <div class="navbar">
                 @*<a asp-area="" asp-controller="Home" asp-action="Index">Repos.Web.Admin</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
@@ -23,22 +24,21 @@
                     </ul>
                 </div>*@
 
-                <a asp-controller="Home" asp-action="Index">Repos</a>
-                <a asp-controller="Home" asp-action="Index">Empresa</a>
+                <a asp-controller="Home" asp-action="Index"><strong>Repos</strong></a>
+                <a class="nav-right" asp-controller="Home" asp-action="Index">Cuenta</a>
+
+                @*<a asp-controller="Home" asp-action="Index">Sucursales</a>
+                <a asp-controller="Home" asp-action="Index">Almacenes</a>
+                <a asp-controller="Home" asp-action="Index">Cajas</a>*@
             </div>
         </nav>
     </header>
-    <div>
+    <div class="render-body">
         <main>
             @RenderBody()
         </main>
     </div>
 
-    @*<footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - Repos.Web.Admin - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
