--- a/Repos.Web.Admin/wwwroot/css/site.css
+++ b/Repos.Web.Admin/wwwroot/css/site.css
@@ -1,3 +1,65 @@
 ﻿body {
-
+    font-family: 'Baloo Paaji 2', cursive;
+    background-color: #f0f1f4;
 }
+
+h1 {
+    font-size: 50px;
+    font-weight: 400;
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: 300;
+}
+
+nav {
+    width: 100%;
+    height: 50px;
+    border-bottom: 0.5px solid #B9B9B9;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+    color: black;
+}
+
+.navbar {
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.navbar a {
+    font-size: 20px;
+    margin: auto 10px;
+    line-height: 50px;
+}
+
+.nav-right {
+    float: right;
+}
+
+.render-body {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.box-selection {
+    font-size: 20px;
+    display: inline-block;
+    margin: 20px 20px 20px 20px;
+    border: 1px solid #B9B9B9;
+    border-radius: 7px;
+    width: 150px;
+    height: 60px;
+    text-align: center;
+}
+
+    .box-selection a {
+        line-height: 60px;
+    }
