Added CRUD for Company. Added Index for Stores

--- a/Repos.Web.Admin/Views/Home/Index.cshtml
+++ b/Repos.Web.Admin/Views/Home/Index.cshtml
@@ -11,11 +11,11 @@
     
     
     <div class="box-selection">
-        <a asp-controller="Home" asp-action="Index">Empresa</a>
+        <a asp-controller="Company" asp-action="Index">Empresa</a>
     </div>
 
     <div class="box-selection">
-        <a asp-controller="Home" asp-action="Index">Sucursal</a>
+        <a asp-controller="Store" asp-action="Index">Sucursal</a>
     </div>
 
     <div class="box-selection">
