Added CRUD for Store model

--- a/Repos.Web.Admin/Views/Company/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Company/Delete.cshtml
@@ -36,7 +36,7 @@
         </dl>
 
         <input type="submit" value="Si, borrar"/>
-        <a asp-action="Index">Regresar</a>
+        <a asp-action="Index">No, regresar</a>
     </form>
 </div>
 
