--- a/Repos.Web.Admin/Views/Company/Edit.cshtml
+++ b/Repos.Web.Admin/Views/Company/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edición de @Model.Name</h1>
+<h1>Edición de empresa @Model.Name</h1>
 <div>
     <form asp-action="Edit">
         <input type="hidden" asp-for="Id"/>
