--- a/Repos.Web.Admin/Views/Store/Index.cshtml
+++ b/Repos.Web.Admin/Views/Store/Index.cshtml
@@ -8,7 +8,7 @@
     <div>
         <h1>Sucursales</h1>
         <div>
-            <a>Nueva sucursal</a>
+            <a asp-controller="Store" asp-action="Create"><img class="add-link-icon" src="~/content/images/plus.png" />Nueva sucursal</a>
         </div>
     </div>
     <div>
