Added CRUD for warehouse model

--- a/Repos.Web.Admin/Views/Home/Index.cshtml
+++ b/Repos.Web.Admin/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
     </div>
 
     <div class="box-selection">
-        <a asp-controller="Home" asp-action="Index">Almacén</a>
+        <a asp-controller="Warehouse" asp-action="Index">Almacén</a>
     </div>
 
     <div class="box-selection">
