Added CRUD for Pos model

--- a/Repos.Web.Admin/Views/Home/Index.cshtml
+++ b/Repos.Web.Admin/Views/Home/Index.cshtml
@@ -23,6 +23,6 @@
     </div>
 
     <div class="box-selection">
-        <a asp-controller="Home" asp-action="Index">Caja</a>
+        <a asp-controller="Pos" asp-action="Index">Caja</a>
     </div>
 </div>
