Added CRUD for Items

--- a/Repos.Web.Admin/Views/Home/Index.cshtml
+++ b/Repos.Web.Admin/Views/Home/Index.cshtml
@@ -25,4 +25,12 @@
     <div class="box-selection">
         <a asp-controller="Pos" asp-action="Index">Caja</a>
     </div>
+
+    <div class="box-selection">
+        <a asp-controller="Item" asp-action="Index">Artículo</a>
+    </div>
+
+    <div class="box-selection">
+        <a asp-controller="Item" asp-action="Inventory">Inventario</a>
+    </div>
 </div>
