Added CRUD for inventory

--- a/Repos.Web.Admin/Views/Home/Index.cshtml
+++ b/Repos.Web.Admin/Views/Home/Index.cshtml
@@ -31,6 +31,6 @@
     </div>
 
     <div class="box-selection">
-        <a asp-controller="Item" asp-action="Inventory">Inventario</a>
+        <a asp-controller="Item" asp-action="GetInventory">Inventario</a>
     </div>
 </div>
