--- a/Repos.Web.Admin/Views/Item/Index.cshtml
+++ b/Repos.Web.Admin/Views/Item/Index.cshtml
@@ -34,8 +34,8 @@
                         <td>@Html.DisplayFor(i => item.TaxPercentaje)</td>
                         <td>@Html.DisplayFor(i => item.Status)</td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.Id"></a>
-                            <a asp-action="Delete" asp-route-it="@item.Id"></a>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                            <a asp-action="Delete" asp-route-it="@item.Id">Borrar</a>
                         </td>
                     </tr>
                     }
