--- a/Repos.Web.Admin/Views/Store/Edit.cshtml
+++ b/Repos.Web.Admin/Views/Store/Edit.cshtml
@@ -21,7 +21,7 @@
         <span asp-validation-for="Name"></span>
 
         <label asp-for="Status"></label>
-        <input type="text" asp-for="Status"/>
+        <input type="checkbox" asp-for="Status"/>
         <span asp-validation-for="Status"></span>
 
         <input type="submit" value="Guardar" />
