--- a/Repos.Web.Admin/Views/Item/Edit.cshtml
+++ b/Repos.Web.Admin/Views/Item/Edit.cshtml
@@ -17,7 +17,7 @@
         <span asp-validation-for="Description"></span>
 
         <label asp-for="Price"></label>
-        <input type="number" asp-for="Price"/>
+        <input type="number" asp-for="Price" step="0.01"/>
         <span asp-validation-for="Price"></span>
 
         <label asp-for="TaxPercentaje"></label>
