Add button on entities styling added

--- a/Repos.Web.Admin/Views/Item/GetInventory.cshtml
+++ b/Repos.Web.Admin/Views/Item/GetInventory.cshtml
@@ -7,9 +7,9 @@
 <div>
     <div>
         <h1>Artículos</h1>
-        <div>
+        @*<div>
             <a asp-action="NewInventory"><img class="add-link-icon"/>Nuevo inventario</a>
-        </div>
+        </div>*@
         <div>
             @if (Model != null && Model.Inventory.Count > 0)
             {
