--- a/Repos.Web.Admin/Views/Item/Index.cshtml
+++ b/Repos.Web.Admin/Views/Item/Index.cshtml
@@ -7,8 +7,8 @@
 <div>
     <div>
         <h1>Artículos</h1>
-        <div>
-            <a asp-action="Create"><img class="add-link-icon"/>Nuevo artículo</a>
+        <div class="button-left-container">
+            <a asp-action="Create"><img class="add-link-icon" src="~/content/images/plus.png"/>Nuevo artículo</a>
         </div>
     </div>
     <div>
