--- a/Repos.Web.Admin/Views/Store/Index.cshtml
+++ b/Repos.Web.Admin/Views/Store/Index.cshtml
@@ -7,7 +7,7 @@
 <div>
     <div>
         <h1>Sucursales</h1>
-        <div>
+        <div class="button-left-container">
             <a asp-controller="Store" asp-action="Create"><img class="add-link-icon" src="~/content/images/plus.png" />Nueva sucursal</a>
         </div>
     </div>
