--- a/Repos.Web.Admin/Views/Warehouse/Index.cshtml
+++ b/Repos.Web.Admin/Views/Warehouse/Index.cshtml
@@ -7,7 +7,7 @@
 <div>
     <div>
         <h1>Almacenes</h1>
-        <div>
+        <div class="button-left-container">
             <a asp-action="Create"><img class="add-link-icon" src="~/content/images/plus.png"/>Nuevo almacén</a>
         </div>
     </div>
