--- a/Repos.Web.Admin/Views/Store/Index.cshtml
+++ b/Repos.Web.Admin/Views/Store/Index.cshtml
@@ -17,19 +17,11 @@
             <table>
                 <thead>
                     <tr>
-                        @Html.DisplayNameFor(model => model.Stores[0].Company)
-                    </tr>
-                    <tr>
-                        @Html.DisplayNameFor(model => model.Stores[0].Code)
-                    </tr>
-                    <tr>
-                        @Html.DisplayNameFor(model => model.Stores[0].Name)
-                    </tr>
-                    <tr>
-                        @Html.DisplayNameFor(model => model.Stores[0].Address)
-                    </tr>
-                    <tr>
-                        @Html.DisplayNameFor(model => model.Stores[0].Status)
+                        <th>@Html.DisplayNameFor(model => model.Stores[0].Company)</th>
+                        <th>@Html.DisplayNameFor(model => model.Stores[0].Code)</th>
+                        <th>@Html.DisplayNameFor(model => model.Stores[0].Name)</th>
+                        <th>@Html.DisplayNameFor(model => model.Stores[0].Address)</th>
+                        <th>@Html.DisplayNameFor(model => model.Stores[0].Status)</th>
                     </tr>
                 </thead>
                 <tbody>
