--- a/Repos.Web.Admin/Views/Item/Index.cshtml
+++ b/Repos.Web.Admin/Views/Item/Index.cshtml
@@ -16,12 +16,14 @@
         {
             <table>
                 <thead>
-                    <tr>@Html.DisplayNameFor(model => model.Items[0].Id)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Items[0].Code)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Items[0].Description)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Items[0].Price)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Items[0].TaxPercentaje)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Items[0].Status)</tr>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Items[0].Id)</th>
+                        <th>@Html.DisplayNameFor(model => model.Items[0].Code)</th>
+                        <th>@Html.DisplayNameFor(model => model.Items[0].Description)</th>
+                        <th>@Html.DisplayNameFor(model => model.Items[0].Price)</th>
+                        <th>@Html.DisplayNameFor(model => model.Items[0].TaxPercentaje)</th>
+                        <th>@Html.DisplayNameFor(model => model.Items[0].Status)</th>
+                    </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model.Items)
