--- a/Repos.Web.Admin/Views/Pos/Index.cshtml
+++ b/Repos.Web.Admin/Views/Pos/Index.cshtml
@@ -16,10 +16,12 @@
         {
             <table>
                 <thead>
-                    <tr>@Html.DisplayNameFor(model => model.Pos[0].Code)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Pos[0].Name)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Pos[0].Warehouse.Code)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Pos[0].Status)</tr>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Pos[0].Code)</th>
+                        <th>@Html.DisplayNameFor(model => model.Pos[0].Name)</th>
+                        <th>@Html.DisplayNameFor(model => model.Pos[0].Warehouse.Code)</th>
+                        <th>@Html.DisplayNameFor(model => model.Pos[0].Status)</th>
+                    </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model.Pos)
