--- a/Repos.Web.Admin/Views/Warehouse/Index.cshtml
+++ b/Repos.Web.Admin/Views/Warehouse/Index.cshtml
@@ -16,12 +16,14 @@
         {
             <table>
                 <thead>
-                    <tr>@Html.DisplayNameFor(model => model.Warehouses[0].Id)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Warehouses[0].Code)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Warehouses[0].CreateDate)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Warehouses[0].Name)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Warehouses[0].Store.Code)</tr>
-                    <tr>@Html.DisplayNameFor(model => model.Warehouses[0].Status)</tr>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Warehouses[0].Id)</th>
+                        <th>@Html.DisplayNameFor(model => model.Warehouses[0].Code)</th>
+                        <th>@Html.DisplayNameFor(model => model.Warehouses[0].CreateDate)</th>
+                        <th>@Html.DisplayNameFor(model => model.Warehouses[0].Name)</th>
+                        <th>@Html.DisplayNameFor(model => model.Warehouses[0].Store.Code)</th>
+                        <th>@Html.DisplayNameFor(model => model.Warehouses[0].Status)</th>
+                    </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model.Warehouses)
