--- a/Repos.Web.Admin/Views/Store/Index.cshtml
+++ b/Repos.Web.Admin/Views/Store/Index.cshtml
@@ -22,13 +22,14 @@
                         <th>@Html.DisplayNameFor(model => model.Stores[0].Name)</th>
                         <th>@Html.DisplayNameFor(model => model.Stores[0].Address)</th>
                         <th>@Html.DisplayNameFor(model => model.Stores[0].Status)</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model.Stores)
                     {
                         <tr>
-                            <td>@Html.DisplayFor(i => item.Company.Name)</td>
+                            <td>@Html.DisplayFor(i => item.Company.Code)</td>
                             <td>@Html.DisplayFor(i => item.Code)</td>
                             <td>@Html.DisplayFor(i => item.Name)</td>
                             <td>@Html.DisplayFor(i => item.Address)</td>
