--- a/Repos.Web.Admin/Views/Pos/Index.cshtml
+++ b/Repos.Web.Admin/Views/Pos/Index.cshtml
@@ -8,7 +8,7 @@
     <div>
         <h1>Cajas</h1>
         <div class="button-left-container">
-            <a asp-controller="Pos" asp-action="Create"><img class="add-link-icon" src="~/content/images/plus.png" />Nueva caja</a>
+            <a asp-controller="Pos" asp-action="Create"><img class="add-link-icon" src="~/content/images/add.png" />Nueva caja</a>
         </div>
     </div>
     <div>
@@ -22,6 +22,7 @@
                         <th>@Html.DisplayNameFor(model => model.Pos[0].Warehouse.Code)</th>
                         <th>@Html.DisplayNameFor(model => model.Pos[0].Status)</th>
                         <th></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -33,8 +34,10 @@
                             <td>@Html.DisplayFor(i => item.Warehouse.Code)</td>
                             <td>@Html.DisplayFor(i => item.Status)</td>
                             <td>
-                                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a>
-                                <a asp-action="Delete" asp-route-id="@item.Id">Borrar</a>
+                                <a class="edit-link" asp-action="Edit" asp-route-id="@item.Id" title="Editar"><img src="~/content/images/pen.png"/></a>
+                            </td>
+                            <td>
+                                <a class="delete-link" asp-action="Delete" asp-route-id="@item.Id" title="Eliminar"><img src="~/content/images/cancel.png"/></a>
                             </td>
                         </tr>
                     }
