--- a/Repos.Web.Admin/Views/Company/Edit.cshtml
+++ b/Repos.Web.Admin/Views/Company/Edit.cshtml
@@ -8,16 +8,16 @@
     <form asp-action="Edit">
         <input type="hidden" asp-for="Id"/>
 
-        <label asp-for="Code"></label>
-        <input type="text" asp-for="Code" placeholder="Código"/>
+        <label asp-for="Code"></label><br />    
+        <input type="text" asp-for="Code" placeholder="Código"/><br />
         <span asp-validation-for="Code"></span>
         
-        <label asp-for="Name"></label>
-        <input type="text" asp-for="Name" placeholder="Nombre"/>
+        <label asp-for="Name"></label><br />
+        <input type="text" asp-for="Name" placeholder="Nombre"/><br />
         <span asp-validation-for="Name"></span>
         
-        <label asp-for="Status"></label>
-        <input type="checkbox" asp-for="Status" placeholder="Estatus"/>
+        <label asp-for="Status"></label><br />
+        <input class="checkbox" type="checkbox" asp-for="Status" placeholder="Estatus"/><br />
         <span asp-validation-for="Status"></span>
         
         <input type="submit" value="Guardar"/>
