--- a/Repos.Web.Admin/Views/Warehouse/Index.cshtml
+++ b/Repos.Web.Admin/Views/Warehouse/Index.cshtml
@@ -8,7 +8,7 @@
     <div>
         <h1>Almacenes</h1>
         <div class="button-left-container">
-            <a asp-action="Create"><img class="add-link-icon" src="~/content/images/plus.png"/>Nuevo almacén</a>
+            <a asp-action="Create"><img class="add-link-icon" src="~/content/images/add.png"/>Nuevo almacén</a>
         </div>
     </div>
     <div>
@@ -23,6 +23,7 @@
                         <th>@Html.DisplayNameFor(model => model.Warehouses[0].Store.Code)</th>
                         <th>@Html.DisplayNameFor(model => model.Warehouses[0].Status)</th>
                         <th></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -35,8 +36,10 @@
                             <td>@Html.DisplayFor(i => item.Store.Code)</td>
                             <td>@Html.DisplayFor(i => item.Status)</td>
                             <td>
-                                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a>
-                                <a asp-action="Delete" asp-route-id="@item.Id">Borrar</a>
+                                <a class="edit-link" asp-action="Edit" asp-route-id="@item.Id" title="Editar"><img src="~/content/images/pen.png"/></a>
+                            </td>
+                            <td>
+                                <a class="delete-link" asp-action="Delete" asp-route-id="@item.Id" title="Eliminar"><img src="~/content/images/cancel.png"/></a>
                             </td>
                         </tr>
                     }
